rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__views__view_raw_time_dimension_converted_once.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/views.rs
expression: result
---
orders_with_customers__created_at | orders_with_customers__count
----------------------------------+-----------------------------
2025-03-01 04:00:00               | 1                           
2025-03-02 05:00:00               | 1                           
2025-03-03 03:00:00               | 1                           
2025-03-04 08:00:00               | 1                           
2025-03-05 04:00:00               | 1                           
2025-03-06 02:00:00               | 1                           
2025-03-07 05:00:00               | 1                           
2025-03-08 03:00:00               | 1
