rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__views__view_with_order_and_limit.snap
---
source: cubesqlplanner/src/tests/integration/views.rs
expression: result
---
orders_with_customers__name | orders_with_customers__count | orders_with_customers__total_amount
----------------------------+------------------------------+------------------------------------
Bob                         | 3                            | 550.00                             
Alice                       | 4                            | 425.00
